Timeline - fix - width overflow

--- a/src/components/Timeline/styles/Timeline.scss
+++ b/src/components/Timeline/styles/Timeline.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/sizes.scss';
 
 .timeline__container { 
-  width: 100vw; 
+  width: 100%; 
   display: flex; 
   flex-direction: column;
   align-items: start; 
